content/nomad/v1.4.x/content/docs/commands/namespace/status.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'Commands: namespace status'
description: >
  The namespace status command is used to view the status of a particular
  namespace.
---

# Command: namespace status

The `namespace status` command is used to view the status of a particular
namespace.

~> Namespaces are open source in Nomad 1.0. Namespaces were Enterprise-only
when introduced in Nomad 0.7.

## Usage

```plaintext
nomad namespace status [options] <namespace_name>
```

If ACLs are enabled, this command requires a management ACL token or a token
that has a capability associated with the namespace.

## General Options

@include 'general_options_no_namespace.mdx'

## Examples

View the status of a namespace:

```shell-session
$ nomad namespace status default
Name            = api-prod
Description     = Prod API servers
Quota           = prod
EnabledDrivers  = docker,exec
DisabledDrivers = raw_exec

Metadata
contact = platform-eng@example.com

Quota Limits
Region  CPU Usage   Memory Usage
global  500 / 2500  256 / 2000
```
